/*
 * Copyright 2023 The Bazel Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.google.idea.blaze.ext;

option java_package = "com.google.idea.blaze.ext";
option java_multiple_files = true;
option java_outer_classname = "BlueprintProto";


message BlueprintFileExistsRequest {
  string blueprint_proto = 1;
}

message BlueprintFileExistsResponse {
  bool exists = 1;
}

message GetPatternListRequest {
  string blueprint_proto = 1;
}

message GetPatternListResponse {
  repeated string patterns = 1;
}

message BlueprintFile {
  string project_name = 1;
  repeated BuildableUnit buildable_unit = 2;
}

message BuildableUnit {
  repeated string build_pattern = 1;
  repeated string test_pattern = 2;
}

service BlueprintService {
  // Checks if a blueprint file exists for a blueprint proto string.
  rpc CheckBlueprintFileExists(BlueprintFileExistsRequest)
      returns (BlueprintFileExistsResponse) {}

  // Returns a list of build and test patterns for a blueprint proto string.
  rpc GetPatternList(GetPatternListRequest) returns (GetPatternListResponse) {}
}
